33 href='index.html' => href='#contact'

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <li><a href="#html5">前端开发</a></li>
                             <li><a href="#course">最新课程</a></li>
                             <li><a href="#app">移动APP</a></li>
-                            <li><a href="index.html">联系我们</a></li>
+                            <li><a href="#contact">联系我们</a></li>
                         </ul>
                     </div>
                 </div>
